syntax = "proto3";

option go_package = "client/pb";

package pb;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
  rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);
  rpc LotsOfRequests(stream HelloRequest) returns (HelloResponse);
  rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string reply = 1;
}